WiP to use Webpack most imports except ext ref to ace.js done

--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,7 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/notes.css">
 
-    <script type="text/javascript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/angular-animate.min.js"></script>
-    <script type="text/javascript" src="js/ui-ace.js"></script>
-    <script type="text/javascript" src="js/ui-bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/ui-bootstrap-tpls.min.js"></script>
-    <script type="text/javascript" src="js/js-yaml.min.js"></script>
-    <script type="text/javascript" src="js/d3.min.js"></script>
-    <script type="text/javascript" src="js/showdown.js"></script>
-    <script type="text/javascript" src="js/showdown-prettify.min.js"></script>
-    <script type="text/javascript" src="js/prettify/run_prettify.js"></script>
+    <script type="text/javascript" src="vendor.bundle.js"></script>
 
     <!-- previous version of ace caused import conflict -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js" type="text/javascript" charset="utf-8"></script>
@@ -83,28 +74,28 @@
             <button id="saveimage" type="button" class="btn btn-black btn-sm" ng-click="saveImage()" uib-tooltip="Save SVG as Image" tooltip-placement="bottom" tooltip-append-to-body="true">
               <span class="glyphicon glyphicon glyphicon-floppy-save" aria-hidden="true" ></span> PNG
             </button>
-            <div class="btn-group" uib-dropdown is-open="status.isopen" ng-show="shown">
-              <button id="examples" type="button" class="btn btn-black btn-sm" uib-dropdown-toggle ng-disabled="disabled">
-                Examples vv<span class="caret"></span>
+            <div class="btn-group" uib-dropdown is-open="status.isopen1" ng-show="shown">
+              <button id="examples" type="button" class="btn btn-black btn-sm dropdown-toggle" uib-dropdown-toggle ng-disabled="disabled">
+                Examples
               </button>
               <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="examples">
-                <li role="menuitem" ng-click="example('coffee.yaml')"><a href="javascript:void(0);">Coffee Colors</a></li>
-                <li role="menuitem" ng-click="example('curves.yaml')"><a href="javascript:void(0);">Curves</a></li>
-                <li role="menuitem" ng-click="example('groups.yaml')"><a href="javascript:void(0);">Groups</a></li>
-                <li role="menuitem" ng-click="example('group connections.yaml')"><a href="javascript:void(0);">Group connections</a></li>
-                <li role="menuitem" ng-click="example('labels.yaml')"><a href="javascript:void(0);">Labels</a></li>
-                <li role="menuitem" ng-click="example('mouseover.yaml')"><a href="javascript:void(0);">Mouseover Metadata</a></li>
-                <li role="menuitem" ng-click="example('notes.yaml')"><a href="javascript:void(0);">Notes</a></li>
-                <li role="menuitem" ng-click="example('NTP.yaml')"><a href="javascript:void(0);">NTP</a></li>
-                <li role="menuitem" ng-click="example('relative positions.yaml')"><a href="javascript:void(0);">Relative positions</a></li>
-                <li role="menuitem" ng-click="example('sample.yaml')"><a href="javascript:void(0);">Sample</a></li>
-                <li role="menuitem" ng-click="example('text locations.yaml')"><a href="javascript:void(0);">Text locations</a></li>
-                <li role="menuitem" ng-click="example('urls.yaml')"><a href="javascript:void(0);">URLs for icons</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('coffee.yaml')"><a href="javascript:void(0);">Coffee Colors</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('curves.yaml')"><a href="javascript:void(0);">Curves</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('groups.yaml')"><a href="javascript:void(0);">Groups</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('group connections.yaml')"><a href="javascript:void(0);">Group connections</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('labels.yaml')"><a href="javascript:void(0);">Labels</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('mouseover.yaml')"><a href="javascript:void(0);">Mouseover Metadata</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('notes.yaml')"><a href="javascript:void(0);">Notes</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('NTP.yaml')"><a href="javascript:void(0);">NTP</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('relative positions.yaml')"><a href="javascript:void(0);">Relative positions</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('sample.yaml')"><a href="javascript:void(0);">Sample</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('text locations.yaml')"><a href="javascript:void(0);">Text locations</a></li>
+                <li class="dropdown-item" role="menuitem" ng-click="example('urls.yaml')"><a href="javascript:void(0);">URLs for icons</a></li>
               </ul>
             </div>
-            <div class="btn-group" uib-dropdown is-open="status.isopen" ng-show="shown">
-              <button id="icons" type="button" class="btn btn-black btn-sm" uib-dropdown-toggle ng-disabled="disabled">
-                Icons<span class="caret"></span>
+            <div class="btn-group" uib-dropdown is-open="status.isopen2" ng-show="shown">
+              <button id="icons" type="button" class="btn btn-black btn-sm dropdown-toggle" uib-dropdown-toggle ng-disabled="disabled">
+                Icons
               </button>
               <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="icons">
                 <li role="menuitem" ng-click="drawIconFamily('aws-native')"><a href="javascript:void(0);">aws</a></li>
